# clearn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: cifar100_sequential.ipynb
clearn/: __init__.py  callbacks.py  core.py  metrics.py  utils.py
clearn/integrations/: __init__.py  huggingface.py
clearn/strategies/: __init__.py  base.py  der.py  ewc.py  gem.py  lora_ewc.py  si.py
examples/: fraud_detection.py  hf_sentiment.py  llm_skills.py  quickstart.py
marketing/: blog_post.md  hackernews.md  linkedin.md  reddit_ml.md  reddit_pytorch.md  twitter_thread.md
site/: index.html
spaces/: README.md  app.py  requirements.txt
tests/: conftest.py  test_core.py  test_der.py  test_ewc.py  test_gem.py  test_huggingface.py  test_lora_ewc.py  test_metrics.py  test_si.py  test_tier1.py  test_tier2.py
