[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearn-ai"
version = "0.2.0"
description = "Continual learning for PyTorch models. Wrap once. Train forever."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rahul Kashyap" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.30",
    "peft>=0.5",
]
dev = [
    "pytest>=7.0",
    "torchvision>=0.15",
]

[project.urls]
Homepage = "https://clearn.ai"
Repository = "https://github.com/rahulkashyap/clearn"

[tool.hatch.build.targets.wheel]
packages = ["clearn"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (run with -m slow)",
]
